--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "adigital/help-links",
     "description": "Define useful links to be added to the dashboard for clients.",
     "type": "craft-plugin",
-    "version": "2.0.0",
+    "version": "3.0.0",
     "keywords": [
         "craft",
         "cms",
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^4.0.0"
+        "craftcms/cms": "^5.0.0"
     },
     "autoload": {
         "psr-4": {
@@ -32,7 +32,7 @@
     "extra": {
         "name": "Help Links",
         "handle": "help-links",
-        "hasCpSettings": true,
+        "hasCpSettings": false,
         "hasCpSection": true,
         "changelogUrl": "https://raw.githubusercontent.com/a-digital/help-links/craft3/CHANGELOG.md",
         "components": {
